welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: '(' expected but identifier found.
    if lookingFor = nums(i) {
       ^indexOfValue:8: error: illegal start of simple expression
  }
  ^